--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.336",
+    "DocVersion": "1.337",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -77,7 +77,7 @@
       "pdffunction": false,
       "powerfxdecimal": false,
       "powerfxv1": false,
-      "primaryoutputpropertycoerciondeprecated": false,
+      "primaryoutputpropertycoerciondeprecated": true,
       "projectionmapping": true,
       "reactformulabar": false,
       "reliableconcurrent": true,
@@ -116,7 +116,7 @@
     "Id": "9d662df8-091d-4444-8272-05db92ce280a",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "Technician App QUAL Environment",
+    "Name": "Technician App DEV Environment",
     "OriginatingVersion": "1.331",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
