--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -77,8 +77,8 @@ LeadScreen As screen:
             lblmechanicnamevalueLdS As label:
                 Size: =16
                 Text: |-
-                    =//glryleadlistLS.Selected.MechanicName && " "  && 
-                    IsBlank(LookUp(SHFPEstimates,Estimate="AMAO-CZELCM",BookingDate))
+                    =glryleadlistLS.Selected.MechanicName //&& " "  && 
+                    //IsBlank(LookUp(SHFPEstimates,Estimate="AMAO-CZELCM",BookingDate))
                 Width: =Parent.Width/2
                 ZIndex: =2
 
