--- a/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/AboutScreen.fx.yaml
@@ -169,9 +169,11 @@ AboutScreen As screen:
                 PaddingTop: =10
                 Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                 Text: |-
-                    ="Recommend equipment upgrades and earn up to $10,000 annually! Technicians are eligible to earn 2% of FP sell price, capped at $500 per lead, and $10,000 per year."
+                    ="Recommend equipment upgrades and earn incentives up to $10,000 annually! Technicians are eligible to earn 2% of FP sell price, capped at $500 per lead, and $10,000 per year."
                     & Char(10) & Char(10) &
-                    "The App is intended for use by Schindler Field Technicians for submitting FP leads directly to the Quick Quote Inside Sales Team. Once a lead is submitted, the Quick Quote Team will review and estimate the lead. The interactive chat feature allows you to message your QQ Rep from within the app. Once a lead has been created, Technicians will receive a notification when prospective incentives are calculated and updated in the App (usually within 24 hours)"
+                    "The App is intended for use by Schindler Field Technicians for submitting FP leads directly to the Quick Quote Inside Sales Team. Once a lead is submitted, the Quick Quote Team will review and estimate the lead. The interactive chat feature allows you to message your QQ Rep from within the app. Once a lead has been created, Technicians will receive a notification when prospective incentives are calculated and updated in the App (usually within 24 hours)."
+                    & Char(10) & Char(10) &
+                    "*Please note: Incentive calculations as displayed in TLG app are approximate. Incentives are finalized by the HQ Repair team on a quarterly basis."
                 VerticalAlign: =VerticalAlign.Top
                 Width: =Parent.Width-20
                 X: =10
