--- a/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/InstructionsScreen.fx.yaml
@@ -3,10 +3,10 @@ InstructionsScreen As screen:
         =ClearCollect(
             GCInstructions,
             {Step: "1. Install PowerApps via Schindler App Catalog and/or Apple App Store."},
-            {Step: "2. Open PowerApps and enter your Schindler credentials (email and password). "},
-            {Step: "3. PowerApps will require you to select a four-digit PIN for future logins (combination of numbers and special character) "},
+            {Step: "2. Open PowerApps and enter your Schindler credentials (email and password)."},
+            {Step: "3. PowerApps will require you to select a four-digit PIN for future logins (combination of numbers and special character)."},
             {Step: "4. Search for the SEC Tech Lead Generation App in the search bar."},
-            {Step: "5. Click on the Info icon beside the App name, then click on the Favorite icon. The App will now be saved in Favorites"}
+            {Step: "5. Click on the Info icon beside the App name, then click on the Favorite icon. The App will now be saved in Favorites."}
         );
 
     ctnMainLIS As groupContainer.verticalAutoLayoutContainer:
