--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -202,7 +202,7 @@ SupportScreen As screen:
                     Height: =80
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                     Text: |-
-                        ="If you have issues with downloading or logging in to PowerApps,
+                        ="If you have issues with downloading or logging into PowerApps,
                         please contact the SIS Service Desk at 1-800-859-4028."
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width-20
@@ -238,8 +238,8 @@ SupportScreen As screen:
                     Height: =200
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                     Text: |-
-                        ="should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Mondays,Wednesdays and Fridays."
-                         & Char(10) & "Please email kishan.mahajan@quantumintegrators.com.If additional assistance is needed,please contact 1-800-123-4567 during the above support hours "
+                        ="Should you experience any issues while using the App or submitting a lead, specialized tech support is also available between 9AM-1PM EST on Monday, Wednesday and Friday."
+                         & Char(10) & "Please email kishan.mahajan@quantumintegrators.com. If additional assistance is needed, please contact 1-800-123-4567 during the above support hours."
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width-20
                     X: =10
@@ -275,7 +275,7 @@ SupportScreen As screen:
                         =//ctnMiddleCS_3.Height-btnContactSS_1.Height-lblContactySS_1.Height-btnSupportSS_3.Height-lblSupportSS_2.Height-btnSupportSS_2.Height
                         200
                     Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
-                    Text: ="if you have any questions or concerns regarding a submitted lead or incentive, please contact Connie Nason at (973) 534-4291 /constance.nason@schindler.com or Melanie Lee at (332) 207-1866 /melanie.lee@schindler.com "
+                    Text: ="If you have any questions or concerns regarding a submitted lead or incentive, please contact Connie Nason at (973) 534-4291 /constance.nason@schindler.com or Melanie Lee at (332) 207-1866 /melanie.lee@schindler.com "
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.Width-20
                     X: =10
