--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -326,7 +326,7 @@ SubmittedLeadScreen As screen:
                         Search(
                             Sort(
                                 Filter(
-                                    LeadInformations,
+                                    Localleadinformation,
                                      /* If(
                                         Header = "Open",
                                         LeadStatus = "Submitted",
@@ -351,7 +351,7 @@ SubmittedLeadScreen As screen:
                         Search(
                             Sort(
                                 Filter(
-                                    LeadInformations,
+                                    Localleadinformation,
                                      /* If(
                                         Header = "Open",
                                         LeadStatus = "Submitted",
