--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -3,6 +3,7 @@ App As appinfo:
     OnStart: |
         =// Set technician Id into variable VarTechnicianID.
         Set(VarTechnicianID,LookUp(SHTechnicians,'Email Address'=User().Email));
+        ClearCollect(Localleadinformation,Filter(LeadInformations,Email=User().Email));
         // Set user Email into variable myMail.
         Set(
             myMail,
