--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -121,7 +121,8 @@ DashboardScreen As screen:
                     FontWeight: =FontWeight.Bold
                     Height: =60
                     Size: =24
-                    Text: =CountRows(Filter(LeadInformations,(LeadStatus="Submitted" || LeadStatus="Rejected" || LeadStatus="InProgress") && Email <> Blank()))
+                    Text: |
+                        =CountRows(Filter(LeadInformations,(LeadStatus="Submitted" || LeadStatus="Rejected" || LeadStatus="InProgress") && Email <> Blank()))
                     Width: =Parent.Width
                     Y: =lblopenleadDS.Y+lblopenleadDS.Height+10
                     ZIndex: =2
