--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -2,7 +2,7 @@ SubmittedLeadScreen As screen:
     OnVisible: |-
         =UpdateContext({locInfoExpanded:false});
         Set(VarDownIcon,true);
-        
+        ClearCollect(Localleadinformation,Filter(LeadInformations,Email=User().Email));
             If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error)
             //,Notify("Internet is connected",NotificationType.Success)
             )
